config/server/riser_default_gateway_example.yaml
# This is HTTP only. See below for TLS example.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-default
  namespace: riser-system
  annotations:
    riser-gateway: public-default
    # TODO: Host for your apps typically formatted as  <stage>.<yourDomain> e.g. dev.yourcompany.org
    # Apps will answer on <appName>.apps.<gatewayHost> e.g. yourapp.apps.dev.yourcompany.org
    # riser-gatewayHost: <TODO>
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # You probably want to change this to be more specific
    hosts:
    - "*"
  #   tls:
  #     httpsRedirect: true
  # - port:
  #     name: https
  #     number: 443
  #     protocol: HTTPS
  #   tls:
  #     credentialName: name.of.tls.secret
  #     mode: SIMPLE
  #   # You probably want to change this to be more specific
  #   hosts:
  #   - "*"
